#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-00-06
- remove XCorrWorkerBase and replace with WorkerData
- add unit tests for 60 events of cspad2x2
- add UserG2 for 3 methods - incremental accumulate, windowed, g2atend
	
Tag: V00-00-05
- implement WorkerData for incrememtal calculation
- add some unit tests
- add psmon plotting
- before refactor to plug in WorkerData
	
Tag: V00-00-04
2015-4-10 David Schneider
- update sphinx documentation
- implement testing part of framework, and cmp script for h5 output
- change names of parameters in system_params/user_params, consistently camelcase
- change message structure to include more than just 120hz counter, pass full
  timing information to workers, viewer, etc
	
Tag: V00-00-03
2015-3-26 David A. Schneider
- switch to using fiducials for event time JIRA Issue PS-126. Servers include
  fiducial in their message to master, master computers counter from server info,
  workers & viewer only get counter.
- add optimization for debug messages, don't form debug strings unless we are 
  doing debug logging
- change name framework uses for xcorrbase to that, from g2, g2 is in user code
	
2015-3-24 David A. Schneider
- add sphinxdoc directory and .rst files for documentation.
  updated default_config.py to include the worker_store_dtype value
	
2015-1-21 David A. Schneider
- improve helper function returning delay list to always return requested # of delays
	
2015-1-20 David A. Schneider
- change default server assignment to round robin on available hosts
- take out automatic detection of server hosts for shmem
- identify instrument in psana datasource for shmem as well as exp=
	
2015-1-15 David A. Schneider
- get mask color tool to work with a detector that produces a 2D ndarray for which there is no geometry file

2015-1-15 David A. Schneider