@@ -15,6 +15,7 @@ Tag: V00-00-06
 - remove XCorrWorkerBase and replace with WorkerData
 - add unit tests for 60 events of cspad2x2
 - add UserG2 for 3 methods - incremental accumulate, windowed, g2atend
+- update documenation and defaul_params.py
 	
 Tag: V00-00-05
 - implement WorkerData for incrememtal calculation
